samples/_failures_safe/1761329491_d0742d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b69845c4.c: In function ‘main’:
./samples/SAFE/__tmp_b69845c4.c:123:37: error: missing terminating ' character
  123 |         line[strcspn(line, "\n")] = '\
      |                                     ^~
./samples/SAFE/__tmp_b69845c4.c:123:9: error: expected expression at end of input
  123 |         line[strcspn(line, "\n")] = '\
      |         ^~~~
./samples/SAFE/__tmp_b69845c4.c:123:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b69845c4.c:123:9: error: expected declaration or statement at end of input
